--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 <body class="mb-5">
     
    <h1>Izzy Beh</h1>
+   <ul>
+    <li><a href="/brains"></a></li>
+    <li><a href="/yarrow/"></a></li>
+    <li><a href="/wiserbuyer/"></a></li>
+   </ul>
 </body>
 
 </html>
